defmt/tests/ui/log-missing-format-impl.rs
struct Foo;

fn main() {
    defmt::info!("{}", Foo)
}
